--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Luis Lopez Designs | Minnesota UI Designer</title>
+    <link href="css/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <header class="navigation">
+        <div class="inline-block logo">
+            <img src="images/LuisLopezLogo.png">
+        </div>
+        <nav class="inline-block">
+            <ul>
+                <li class="inline-block"><a href="#">Work</a></li>
+                <li class="inline-block"><a href="#">About</a></li>
+                <li class="inline-block"><a href="#">Skills</a></li>
+                <li class="inline-block"><a href="#">Resume</a></li>
+                <li class="inline-block"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="heroImg">
+        <div class="content">
+            <h1>Luis Lopez</h1>
+            <h2>UI Designer | Creative | Thinker</h2>
+            <a href="#"></a>
+        </div>
+    </section>
+    <footer>
+        <div class="inline-block">
+            <div class="logo">
+                <img src="images/LuisLopezLogo.png">
+            </div>
+        </div>
+        <div class="inline-block">
+            <p>Copyright &copy; 2020<br>
+            All rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
