Unit 17 HW Update - BONUS

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <header class="navigation">
-        <div class="inline-block logo">
-            <img src="images/LuisLopezLogo.png">
+        <div class="inline-block"
+            <div class="logo">
+                <img src="images/LuisLopezLogo.png">
+            </div>
         </div>
         <nav class="inline-block">
             <ul>
-                <li class="inline-block"><a href="#">Work</a></li>
                 <li class="inline-block"><a href="#">About</a></li>
                 <li class="inline-block"><a href="#">Skills</a></li>
-                <li class="inline-block"><a href="#">Resume</a></li>
+                <li class="inline-block"><a href="#">Work</a></li>
                 <li class="inline-block"><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -24,21 +25,18 @@
 
     <section class="heroImg">
         <div class="content">
-            <h1>Luis Lopez</h1>
-            <h2>UI Designer | Creative | Thinker</h2>
-            <a href="#"></a>
+            <img src="images/LuisLopezAbout.jpg">
+            <p>UI Designer with a background in Graphic Design and Web Design, focused on maximizing usability and user experience through thoughtful, innovative, solutions.</p>
+            <button>Download Resume</button>
         </div>
     </section>
     <footer>
-        <div class="inline-block">
-            <div class="logo">
-                <img src="images/LuisLopezLogo.png">
-            </div>
-        </div>
-        <div class="inline-block">
-            <p>Copyright &copy; 2020<br>
-            All rights reserved</p>
-        </div>
+        <ul>
+            <li class="inline-block"><a href="#">About</a></li>
+            <li class="inline-block"><a href="#">Skills</a></li>
+            <li class="inline-block"><a href="#">Work</a></li>
+            <li class="inline-block"><a href="#">Contact</a></li>
+        </ul>
     </footer>
 </body>
 </html>
